<resources>
    <string name="app_name">discuzandoird</string>
    <string name="title_menu_home">Home</string>
    <string name="title_menu_account">Account</string>
    <string name="login">Login</string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="hint_email">Email</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>